# sinaraml

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
asinaraml_old/: config_manager.py  infra.py  server.py  sinara_platform.py
sinaraml/: __init__.py  cli_manager.py  common_utils.py  config_manager.py  docker_utils.py  infra.py  model.py  org_loader.py  org_manager.py  platform.py  plugin_loader.py  server.py  sinaraml.py
