[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "build",
]
build-backend = "setuptools.build_meta"

[project]
name = "sinaraml"
authors = [
    {name = "sinaraml", email = "sinaraml.official@gmail.com"},
]
description = "SinaraML"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["cli", "sinaraml"]
license = { file="LICENSE" }
classifiers = [
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "docker>=4.3.1"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/4-DS/sinaraml"

[project.scripts]
sinara = "sinaraml.sinaraml:main"

[tool.black]
line-length = 88
color = true